--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#CDDC39</color>
     <color name="white">#fff</color>
     <color name="option">#035aa6</color>
+    <color name="red">#FF0000</color>
 </resources>
