--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,9 +12,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:padding">16dp</item>
+        <item name="android:padding">@dimen/mainpadding</item>
         <item name="android:background">@drawable/options</item>
-        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginTop">@dimen/mainpadding</item>
     </style>
     <style name="buttons">
         <item name="android:layout_width">0dp</item>
@@ -22,6 +22,6 @@
         <item name="android:layout_weight">1</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/option</item>
-        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginLeft">@dimen/subPadding</item>
     </style>
 </resources>
